Change redirect response and Add frontend domain to urls and Add new keyword property to links table
