# controllers/linkredirect.go
@@ -12,16 +12,22 @@ type LinkRedirectController struct {
 	LinkRedirectService domain.LinkRedirectRepository
 }
 
+// @Summary 		Redirect URL
+// @Description		Redirect short url to your main url
+// @Tags			URL
+// @Accept			json
+// @Router			/link/{key}	[get]
+// @Param 			key		path	string 		true 	"url key"
+// @Success			200		{object}	entity.ShortLinkOkResponse
+// @Failure			404		{object}	entity.ShortLinkNotExistsResponse
 func (l *LinkRedirectController) LinkRedirectHandler(ctx *gin.Context) {
-	key := ctx.Param("url")
-	shortURL := l.LinkRedirectService.GetCurrentHost(ctx) + key
+	key := ctx.Param("key")
 
-	dbLink, ok := l.LinkRedirectService.CheckLinkExists(shortURL)
-
+	dbLink, ok := l.LinkRedirectService.CheckLinkExists(key)
 	if !ok {
 		ctx.AbortWithStatusJSON(http.StatusNotFound, gin.H{"response": "url not found"})
 		return
 	}
 
-	ctx.Redirect(http.StatusPermanentRedirect, dbLink.LongUrl)
+	ctx.JSON(http.StatusOK, gin.H{"response": dbLink.LongUrl})
 }
