# routers/shortlink.go
@@ -5,6 +5,7 @@ import (
 	"gorm.io/gorm"
 
 	"github.com/iarsham/url-shortener/controllers"
+	"github.com/iarsham/url-shortener/helpers"
 	"github.com/iarsham/url-shortener/services"
 )
 
@@ -15,5 +16,5 @@ func ShortLinkRouter(db *gorm.DB, r *gin.RouterGroup) {
 		ShortLinkService: linkRepo,
 	}
 
-	r.POST("/create-short", shortLinkController.CreateShortLinkHandler)
+	r.POST("/create-short", helpers.JwtAuthMiddelware(), shortLinkController.CreateShortLinkHandler)
 }
